finalizacion de practica

--- a/index.html
+++ b/index.html
@@ -11,11 +11,85 @@
 <title> videojuego de Stanley Alexander Martinez Portillo</title>
 
 <style>
+    @font-face {
+        font-family: 'Chandia';
+        src: url('Chandia,Woff2')format('woff2');
+        font-weight: bold;
+        font-style: normal;
+        display: swap;
+    }
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
+header{
+    border: 1px solid red;
+}
+nav{
+    border: 1px solid black;
+    float: left;
+    width: 20%;
+    height: 600px;
+}
+main{
+    border: 1px solid orange;
+    width: 59.6%;
+    float: left;
+    height: 600px;
+}
+aside{
+    border: 1px solid purple;
+    width: 20%;
+    float: left;
+    height: 600px;
+}
+footer{
+    border: 1px solid blue;
+}
+.Chandia-bold{
+    font-family: 'Chandia';
+    font-weight: bold;
+}.pacifico-regular {
+  font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
 
 </style>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <script>src="scripts.js"</script>
 </head>
+<body>
+<header>
+    <h1 class="pacifico-regular"> este es un videojuego de stanley alexander martinez portillo</h1>
+</header>
+<nav>
+    <h1> este es el nav</h1>
+    <ul>
+        <li>opcion de menu 1</li>
+        <li>opcion de menu 2</li>
+        <li>opcion de menu 3</li>
+        <li>opcion de menu 4</li>
+        <li>opcion de menu 5</li>
+        <li>opcion de menu 6</li>
+    </ul>
+</nav>
+<main>
+    <h1 class="Chandia-bold"> este es el main</h1>
+    <p>aqui puede colocar el videojuego</p>
+</main>
+<aside>
+    <h1> este es el aside</h1>
+    <p>aqui puede colocarse el chat con otros jugadores, informacion el autor, informacion del jugador,
+        noticias o publicidad</p>
+</aside>
+<footer>
+    <h1>este es el footer</h1>
+    <p>podemos colocar informacion de contacto, nombre de la empresa, autores, copyright, etc.</p>
+</footer>
+</body>
 
 
 
